# ChangeLog for x11-themes/gtk-engines-murrine
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-themes/gtk-engines-murrine/ChangeLog,v 1.34 2008/07/07 21:55:24 jokey Exp $

  07 Jul 2008; Markus Ullmann <jokey@gentoo.org>
  gtk-engines-murrine-0.53.1-r1.ebuild:
  Add pkgconfig dep for bug #227581

  14 Jun 2008; nixnut <nixnut@gentoo.org>
  gtk-engines-murrine-0.53.1-r1.ebuild:
  Stable on ppc wrt bug 225871

  14 Jun 2008; Christoph Mende <angelos@gentoo.org>
  gtk-engines-murrine-0.53.1-r1.ebuild:
  Stable on amd64, bug #225871

  11 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  gtk-engines-murrine-0.53.1-r1.ebuild:
  stable x86, bug 225871

  27 Mar 2008; <jokey@gentoo.org> -gtk-engines-murrine-0.41.ebuild,
  -gtk-engines-murrine-0.51.ebuild, -gtk-engines-murrine-0.52.ebuild:
  Drop old

  17 Mar 2008; <jokey@gentoo.org>
  +files/gtk-engines-murrine-0.53.1-use-gtk_free.patch, metadata.xml,
  +gtk-engines-murrine-0.53.1-r1.ebuild:
  Synced from my dev overlay, thanks to Adam again :)

*gtk-engines-murrine-0.53.1-r1 (17 Mar 2008)

  17 Mar 2008; Adam James <atj@pulsewidth.org.uk>
  +gtk-engines-murrine-0.53.1-r1.ebuild:
  New revision with fixes for bugs #192797, #198815 & #204488.

  17 Mar 2008; Adam James <atj@pulsewidth.org.uk> metadata.xml:
  Adding jokey as proxy maintainer.

  19 Jul 2007; Christoph Mende <angelos@gentoo.org>
  gtk-engines-murrine-0.53.1.ebuild:
  Stable on amd64 wrt bug #185191

  16 Jul 2007; nixnut <nixnut@gentoo.org> gtk-engines-murrine-0.53.1.ebuild:
  Stable on ppc wrt bug 185191

  14 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  gtk-engines-murrine-0.53.1.ebuild:
  stable x86, bug 185191

  09 Jun 2007; nixnut <nixnut@gentoo.org> gtk-engines-murrine-0.52.ebuild:
  Stable on ppc wrt bug 181024

  07 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  gtk-engines-murrine-0.52.ebuild:
  stable x86, bug 181024
