@@ -1,12 +1,23 @@
 AUX gtk-engines-murrine-0.53.1-use-gtk_free.patch 473 RMD160 de3e052afa48129c031b7a64fc051720428c279e SHA1 b69c32c079dd3311fb243af0f3f24e9a3d8370cc SHA256 73354c6420ecaeccdf0ac3a199cc0b2f1f21ce6be709bf4be0eee8ec47923e08
+DIST MurrinaAquaIsh.tar.bz2 1353 RMD160 bbf69d3061fb11b862accf787e323ddcc394d5ca SHA1 bfa6099413b7de1c734b985d40713b997df7060b SHA256 6d84649adf42eff90f3e4b54b5d40a8a90aa6b2470b76d2f72cfd8709496147e
+DIST MurrinaBlu-0.32.tar.gz 3946 RMD160 f6bf044cc139a77e67983c7482586d2f1281bd16 SHA1 2e885c6e7324db42528529faf6e29a10a309d935 SHA256 1f91178e269be708731cea3a13614cb010aaebafb39c6b7a5758036cb39cd61f
+DIST MurrinaBlue.tar.bz2 14161 RMD160 c9bc53d52af528dd3e264630dfb9c88d5f5a6bed SHA1 1c81310edb407e24194f5e7c30541afc7eb48c68 SHA256 62b31aef56bc54c9f8446016b0f9c3088b2916fb1fc5b87333854e150cb75bfb
+DIST MurrinaCandido.tar.gz 3661 RMD160 3dc301b7e7e1804ad09e3fcc8503d1a02902d838 SHA1 f4c7dd87a4cfa7bc42fe3fa201c6f07d836e4f10 SHA256 b3e7f8d170fc3947bab73b19d0a18bc2c9cf0896c6652e20d14c30f585af1bf0
+DIST MurrinaChrome.tar.gz 3632 RMD160 77be24796eb62389ac59e87a0e0bf0ba953678ed SHA1 181b16a4ea59859a75f161d7cd1b11a5f10583f5 SHA256 ef8baa0e0eef22baf5f56004e99236159a0b9c24534d550b9c1919e6f15e5fa3
+DIST MurrinaCream.tar.gz 3636 RMD160 3878750c207a2f336de1b431c328202962eaacf5 SHA1 18fb2614b09bfafbd7b91aadae850af482508a76 SHA256 c71d6d6456fb46309621f6b1a5751dff783661b30828cf8a8c1c538b575da132
 DIST MurrinaFancyCandy.tar.bz2 1586 RMD160 7d29f674f5ef6f28e19d1455da478e107da30376 SHA1 6b957cdc19c113fa608ab83b690d72b77e0c1033 SHA256 916fd74440ab8ad787de05ecc3b1dcafb6c576b7daf211008236c222a739a06b
 DIST MurrinaGilouche.tar.bz2 2062 RMD160 54dbfc81faba432bbf05d82735698533c6d233e9 SHA1 0b4717522a911511f2f75e599da929297acfe174 SHA256 589516c0ea81628d0317650d6367a22dd0deade981a042a462cef6d4ff1a2592
 DIST MurrinaLoveGray.tar.bz2 1510 RMD160 15e8b00c8dcceee5a91f3c3f6e2162ba8d5d64d1 SHA1 99b9d017384f94d160dd69a9ae5aa061d1c5eca3 SHA256 c5f9eb052a12eef90e7258ca5cf5ca27d10b333a1a3753def183f53c096d456b
+DIST MurrinaTango.tar.bz2 1772 RMD160 0e9bd6368aa0c0b70e4882e98f4d96588a4a42c7 SHA1 a0e1a84eb30534850271cb0b9a35a4fddb4ae7c4 SHA256 79852e8308a29876366851437192256f6d51438d4f1a6db6161fa51d50402201
 DIST MurrinaVerdeOlivo.tar.bz2 1320 RMD160 b9435d0345c8b6d64c9af7eaa51eec4e0de5d28f SHA1 26160027366073d6d778fb9cfbe6bef4d8109b4f SHA256 e0b2a00c4ea8b35aa57e1a7954cc94538b7829a62a3b9b8dca5e7b1bcd7b7990
+DIST Murrine-Light.tar.gz 1483 RMD160 ee8034fec7cc75dc5b0682288942950a06f32c6a SHA1 83d41f51bb0d6b5ee44f9acb482e94e33d772ffe SHA256 1eca583af45426eb9fc9b3fc37fa556b482e7b646f18512aec65b8a4e8b62a43
 DIST Murrine.tar.gz 3693 RMD160 b470acea042b56e8ab49e6e535be3579faf90557 SHA1 6669a8cf02aac2e5109651d0b83faf89b052f0ef SHA256 90be2783ab823aa31c9eb74a36e49a87373bdeec97c543948bf7aff11f1bd70e
+DIST MurrineRounded.tar.bz2 6340 RMD160 0685445d5f79ea24dcc3a406cb27a903bf322c41 SHA1 2a73dbdf0a5a7c57741f5b0021bde8d1c2fb004b SHA256 ebc08de6576d57539db7352f48827eb4f1c888c4f5db1cdd5a9429713acb7e09
 DIST MurrineThemePack.tar.bz2 3003 RMD160 79ccfc6ebf1cf45a5a9721b411c39d64b0657fae SHA1 67472ec2f999ce5e71dbbc21cdbe3e20d5a5decc SHA256 1c3daa87fc55e41f86a53aad3605ef2894ced64ec96a3bff88880fc9ef58c96a
 DIST MurrineXfwm.tar.bz2 6408 RMD160 0162288af03b4e2c1acf7a37d3dffe97c219c00e SHA1 3b600f24a85a9406a46f55c84f95ac0da04ad17c SHA256 b76f1e4eef7747bcc468b55dac74a307220cecb242ecf173c4a491e23505126b
 DIST murrine-0.53.1.tar.bz2 261530 RMD160 dd7a507ee7ce323b88382cf42bab7f01881f9c39 SHA1 108e2fa43c152406ff0c7bcdaf484413fd7bd735 SHA256 8a1c0993d2e57fdf643a9c4a75494afecb900d070e901fff600dbfbf241f3042
+DIST murrine-0.90.3.tar.bz2 271512 RMD160 347909724a11cfe53f922208f46e39f47b420459 SHA1 5c65acf7948d23bb1693728157425120486303a8 SHA256 c61ff7614e68b705560612ea7485454d1a7947422ac8cfe11d75e45370e2f0ba
 EBUILD gtk-engines-murrine-0.53.1-r1.ebuild 1469 RMD160 3f8d681313b251374db71182f11eb74f0c690251 SHA1 988559797a831dcc0912c285b644f8368ec9776b SHA256 68a440400cd739fd07fe79cfd86479189e5d12f66d35ac2beaa58e4ac29a5db7
-MISC ChangeLog 4911 RMD160 889a6cb85e1c3995d8cd4a138249a17995cfe738 SHA1 8174dd105e68900a2318d8188409bf207767cd42 SHA256 9797e0cedd0fd3f2b36b6b19231fcd151677b390e02fa453ce8c0967a03d5676
-MISC metadata.xml 885 RMD160 e4cb135cef1f7c7861a7d0b674ff3b8a0c5a534f SHA1 c0499bf5833df6153f21ff9d94fbd5236da8dc9e SHA256 a54da39e61936b1c621ec57271d86e3a5397958910b1f2ffc518d073485ad88d
+EBUILD gtk-engines-murrine-0.90.3.ebuild 1552 RMD160 bad3c2a65ba4bbb02e0010eb58319e797807b8a7 SHA1 d2113cc76436eaa3958ecb40e648cea5daaacf7c SHA256 e739ed6f611db1612a17a33ff77b3078c705c43eb6e631f09df4e8296ad4f101
+MISC ChangeLog 5161 RMD160 66b4997537d6262436d268c3bb7efb676384d4f2 SHA1 410557665f873a7a6daf6f590ef21886150dd5e3 SHA256 a5ca81fa64f5fb2219b808af8ff9e1fb9928c67826e6a33c26b9562160f790eb
+MISC metadata.xml 973 RMD160 b18c5ef996387f40810519a7476e11dff99f0482 SHA1 d04d2302b3caa70235639360d4dd3a6ef18d2086 SHA256 6057ee90b59aff0113e06c180de764cc8caf45a2f24a84ab8054881cc91ac8fa
