@@ -1,6 +1,16 @@
 # ChangeLog for x11-themes/gtk-engines-murrine
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-themes/gtk-engines-murrine/ChangeLog,v 1.34 2008/07/07 21:55:24 jokey Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-murrine/ChangeLog,v 1.36 2009/04/05 12:48:11 jokey Exp $
+
+  05 Apr 2009; Markus Ullmann <jokey@gentoo.org>
+  gtk-engines-murrine-0.90.3.ebuild:
+  Minor fixes
+
+*gtk-engines-murrine-0.90.3 (05 Apr 2009)
+
+  05 Apr 2009; Markus Ullmann <jokey@gentoo.org>
+  +gtk-engines-murrine-0.90.3.ebuild:
+  Version bump, misc ebuild improvements
 
   07 Jul 2008; Markus Ullmann <jokey@gentoo.org>
   gtk-engines-murrine-0.53.1-r1.ebuild:
